[gd_scene load_steps=4 format=3 uid="uid://csesmjn10210h"]

[ext_resource type="Script" uid="uid://dxk2j7haptsf7" path="res://Scripts/bullet_controller.gd" id="1_oduel"]
[ext_resource type="Texture2D" uid="uid://ecl4eb67kbb5" path="res://Assets/Items/hat.png" id="2_oduel"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oduel"]
radius = 4.0
height = 26.666668

[node name="bullet" type="Area2D" groups=["bullet"]]
script = ExtResource("1_oduel")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.08, 0.08)
texture = ExtResource("2_oduel")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -3)
rotation = 1.5707964
scale = Vector2(1.5, 1.5)
shape = SubResource("CapsuleShape2D_oduel")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
